--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
   "devDependencies": {
     "grunt": "^0.4.4",
     "grunt-contrib-uglify": "^0.4.0",
-    "grunt-contrib-yuidoc": "^0.5.2"
+    "grunt-contrib-yuidoc": "^0.5.2",
+    "grunt-git": "^0.2.7",
+    "karma": "^0.12.9",
+    "karma-chrome-launcher": "^0.1.3",
+    "karma-cli": "0.0.4",
+    "karma-jasmine": "^0.1.5"
   }
 }
