--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "karma": "^0.12.9",
     "karma-chrome-launcher": "^0.1.3",
     "karma-cli": "0.0.4",
-    "karma-jasmine": "^0.1.5"
+    "karma-jasmine": "^0.1.5",
+    "karma-phantomjs-launcher": "^0.1.4"
   }
 }
