--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Pub/Sub library that allows 'subscribe', 'publish' and 'unsubscribe' methods.",
   "main": "Gruntfile.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/.bin/karma start --single-run --browsers PhantomJS"
   },
   "repository": {
     "type": "git",
