--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "grunt-contrib-uglify": "^0.4.0",
     "grunt-contrib-yuidoc": "^0.5.2",
     "grunt-git": "^0.2.7",
+    "grunt-karma": "^0.8.2",
     "karma": "^0.12.9",
     "karma-chrome-launcher": "^0.1.3",
     "karma-cli": "0.0.4",
